# Square_Calculator

./: Cargo.toml  README.md
src/: lib.rs
