[package]
name = "square_calculator"
version = "0.1.0"
authors = ["N A Abbasi <nisar_abbasi@yahoo.com>"]
edition = "2018"
repository = "https://github.com/NisarAbbasi1978/Square_Calculator.git"
homepage = "https://github.com/NisarAbbasi1978/Square_Calculator.git"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Square Calculator"
[dependencies]
